Added back filtering

--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,18 +563,19 @@
     "    dst_bbs: List[BoundingBox],\n",
     "    threshold: float = 10.0,\n",
     "    downscale_factor: float = 0.25,\n",
+    "    ransac_threshold: float = 5.0,\n",
+    "    max_ransac_iters: int = 5000,\n",
+    "    confidence_limit: float = 0.99,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"\n",
-    "    Perform a memory-efficient thin plate spline transformation.\n",
+    "    Perform a memory-efficient thin plate spline transformation with distance and RANSAC filtering.\n",
     "    \"\"\"\n",
+    "\n",
     "    # Image dimensions\n",
     "    h, w = image.shape[:2]\n",
     "    small_h, small_w = int(h * downscale_factor), int(w * downscale_factor)\n",
     "\n",
-    "    # Scale down image first to save memory\n",
-    "    small_image = cv2.resize(image, (small_w, small_h))\n",
-    "\n",
-    "    # Process at low resolution\n",
+    "    # Scale bounding boxes\n",
     "    def scale_bbs(bbs, factor):\n",
     "        return [\n",
     "            BoundingBox(\n",
@@ -586,75 +587,73 @@
     "            ) for bb in bbs\n",
     "        ]\n",
     "\n",
-    "    # Scale bounding boxes\n",
     "    scaled_src_bbs = scale_bbs(src_bbs, downscale_factor)\n",
     "    scaled_dst_bbs = scale_bbs(dst_bbs, downscale_factor)\n",
     "\n",
-    "    # Remove duplicates and sort\n",
+    "    # Remove duplicates\n",
     "    duplicate_cats = {k for k, v in Counter([bb.category for bb in scaled_src_bbs]).items() if v > 1}\n",
     "    duplicate_cats |= {k for k, v in Counter([bb.category for bb in scaled_dst_bbs]).items() if v > 1}\n",
-    "    \n",
+    "\n",
     "    scaled_src_bbs = [bb for bb in scaled_src_bbs if bb.category not in duplicate_cats]\n",
     "    scaled_dst_bbs = [bb for bb in scaled_dst_bbs if bb.category not in duplicate_cats]\n",
-    "    \n",
+    "\n",
     "    scaled_src_bbs.sort(key=lambda bb: bb.category)\n",
     "    scaled_dst_bbs.sort(key=lambda bb: bb.category)\n",
     "\n",
-    "    # Get center points\n",
-    "    src_points = np.array([[\n",
-    "        (bb.left + bb.right) / 2, \n",
-    "        (bb.top + bb.bottom) / 2\n",
-    "    ] for bb in scaled_src_bbs], dtype=np.float32)\n",
-    "    \n",
-    "    dst_points = np.array([[\n",
-    "        (bb.left + bb.right) / 2, \n",
-    "        (bb.top + bb.bottom) / 2\n",
-    "    ] for bb in scaled_dst_bbs], dtype=np.float32)\n",
+    "    # Apply distance filtering\n",
+    "    scaled_src_bbs, scaled_dst_bbs = __filter_by_distance(scaled_src_bbs, scaled_dst_bbs, threshold)\n",
     "\n",
-    "    if len(src_points) < 4:\n",
-    "        return image\n",
+    "    # Convert to numpy arrays\n",
+    "    src_points = np.array([[(bb.left + bb.right) / 2, (bb.top + bb.bottom) / 2] for bb in scaled_src_bbs], dtype=np.float32)\n",
+    "    dst_points = np.array([[(bb.left + bb.right) / 2, (bb.top + bb.bottom) / 2] for bb in scaled_dst_bbs], dtype=np.float32)\n",
     "\n",
-    "    # Calculate displacement field\n",
-    "    rbf_x = Rbf(\n",
-    "        dst_points[:, 0], dst_points[:, 1],\n",
-    "        src_points[:, 0] - dst_points[:, 0],\n",
-    "        function='thin_plate'\n",
-    "    )\n",
-    "    rbf_y = Rbf(\n",
-    "        dst_points[:, 0], dst_points[:, 1],\n",
-    "        src_points[:, 1] - dst_points[:, 1],\n",
-    "        function='thin_plate'\n",
-    "    )\n",
+    "    # Apply RANSAC filtering\n",
+    "    if len(src_points) >= 4:\n",
+    "        src_x, src_y, dst_x, dst_y = __filter_by_RANSAC(\n",
+    "            scaled_src_bbs, scaled_dst_bbs, \n",
+    "            threshold=ransac_threshold, \n",
+    "            max_iters=max_ransac_iters, \n",
+    "            confidence_limit=confidence_limit\n",
+    "        )\n",
     "\n",
-    "    # Create small grid\n",
+    "        # If not enough inliers remain, return the original image\n",
+    "        if len(src_x) < 4:\n",
+    "            return image\n",
+    "\n",
+    "        # Update src and dst points\n",
+    "        src_points = np.column_stack((src_x, src_y))\n",
+    "        dst_points = np.column_stack((dst_x, dst_y))\n",
+    "    else:\n",
+    "        return image  # Not enough points for TPS\n",
+    "\n",
+    "    # Compute displacement field using TPS\n",
+    "    rbf_x = Rbf(dst_points[:, 0], dst_points[:, 1], src_points[:, 0] - dst_points[:, 0], function='thin_plate')\n",
+    "    rbf_y = Rbf(dst_points[:, 0], dst_points[:, 1], src_points[:, 1] - dst_points[:, 1], function='thin_plate')\n",
+    "\n",
+    "    # Generate grid for transformation\n",
     "    y, x = np.mgrid[0:small_h, 0:small_w].astype(np.float32)\n",
-    "    \n",
-    "    # Calculate displacements\n",
+    "\n",
+    "    # Compute displacements\n",
     "    dx = rbf_x(x, y).astype(np.float32)\n",
     "    dy = rbf_y(x, y).astype(np.float32)\n",
     "\n",
-    "    # Add displacements to get final coordinates\n",
+    "    # Final coordinates\n",
     "    map_x = (x + dx)\n",
     "    map_y = (y + dy)\n",
     "\n",
     "    # Scale back to original resolution\n",
-    "    map_x = cv2.resize(map_x, (w, h)) * (1/downscale_factor)\n",
-    "    map_y = cv2.resize(map_y, (w, h)) * (1/downscale_factor)\n",
+    "    map_x = cv2.resize(map_x, (w, h)) * (1 / downscale_factor)\n",
+    "    map_y = cv2.resize(map_y, (w, h)) * (1 / downscale_factor)\n",
     "\n",
-    "    # Ensure coordinates are within bounds\n",
+    "    # Clip to image boundaries\n",
     "    map_x = np.clip(map_x, 0, w - 1)\n",
     "    map_y = np.clip(map_y, 0, h - 1)\n",
     "\n",
-    "    # Apply transformation\n",
-    "    warped = cv2.remap(\n",
-    "        image,\n",
-    "        map_x.astype(np.float32),\n",
-    "        map_y.astype(np.float32),\n",
-    "        interpolation=cv2.INTER_LINEAR,\n",
-    "        borderMode=cv2.BORDER_REFLECT\n",
-    "    )\n",
+    "    # Apply warping\n",
+    "    warped = cv2.remap(image, map_x.astype(np.float32), map_y.astype(np.float32), interpolation=cv2.INTER_LINEAR, borderMode=cv2.BORDER_REFLECT)\n",
     "\n",
     "    return warped\n",
+    "\n",
     "\n",
     "# Function to visualize the transformation\n",
     "def visualize_transformation(image, transformed_image):\n",
@@ -666,14 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 235.77 MiB, increment: 39.69 MiB\n"
+      "peak memory: 219.41 MiB, increment: 37.52 MiB\n"
      ]
     }
    ],
