Incorporated RANSAC and distance based filtering

--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,6 +569,19 @@
     ") -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Perform a memory-efficient thin plate spline transformation with distance and RANSAC filtering.\n",
+    "\n",
+    "    Args:\n",
+    "        image (np.ndarray): The image to be transformed.\n",
+    "        src_bbs (List[BoundingBox]): List of source BoundingBox objects.\n",
+    "        dst_bbs (List[BoundingBox]): List of destination BoundingBox objects.\n",
+    "        threshold (float): The threshold distance for filtering out points (default: 10.0).\n",
+    "        downscale_factor (float): Factor to downscale the image for computing warp (default: 0.25).\n",
+    "        ransac_threshold (float): The threshold distance for RANSAC filtering (default: 5.0).\n",
+    "        max_ransac_iters (int): The maximum number of iterations for RANSAC (default: 5000).\n",
+    "        confidence_limit (float): The confidence limit for RANSAC (default: 0.99).\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray: The transformed image at original size\n",
     "    \"\"\"\n",
     "\n",
     "    # Image dimensions\n",
