Profiling time performance

--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,17 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 945.03 MiB, increment: 748.76 MiB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%memit\n",
     "for sheet, yolo_bbs in yolo_data.items():\n",
@@ -553,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,14 +670,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cProfile\n",
+    "import pstats\n",
+    "from pstats import SortKey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 219.41 MiB, increment: 37.52 MiB\n"
+      "         1836 function calls in 0.241 seconds\n",
+      "\n",
+      "   Ordered by: cumulative time\n",
+      "   List reduced from 95 to 20 due to restriction <20>\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "        1    0.006    0.006    0.241    0.241 C:\\Users\\15406\\AppData\\Local\\Temp\\ipykernel_17464\\854020479.py:1(transform_thin_plate_splines)\n",
+      "        2    0.010    0.005    0.225    0.113 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\scipy\\interpolate\\_rbf.py:280(__call__)\n",
+      "        4    0.180    0.045    0.180    0.045 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\scipy\\interpolate\\_rbf.py:169(_h_thin_plate)\n",
+      "        2    0.000    0.000    0.035    0.018 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\scipy\\interpolate\\_rbf.py:277(_call_norm)\n",
+      "        2    0.000    0.000    0.035    0.017 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\scipy\\spatial\\distance.py:2649(cdist)\n",
+      "        2    0.035    0.017    0.035    0.017 {built-in method scipy.spatial._distance_pybind.cdist_euclidean}\n",
+      "        1    0.003    0.003    0.003    0.003 {remap}\n",
+      "        2    0.000    0.000    0.002    0.001 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\scipy\\interpolate\\_rbf.py:218(__init__)\n",
+      "        5    0.001    0.000    0.001    0.000 {method 'astype' of 'numpy.ndarray' objects}\n",
+      "        2    0.001    0.000    0.001    0.001 C:\\Users\\15406\\AppData\\Local\\Temp\\ipykernel_17464\\854020479.py:33(scale_bbs)\n",
+      "        2    0.000    0.000    0.001    0.000 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\scipy\\interpolate\\_rbf.py:270(A)\n",
+      "        2    0.001    0.000    0.001    0.000 {resize}\n",
+      "        1    0.000    0.000    0.001    0.001 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\numpy\\lib\\_index_tricks_impl.py:149(__getitem__)\n",
+      "        2    0.000    0.000    0.001    0.000 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\scipy\\linalg\\_basic.py:51(solve)\n",
+      "        4    0.000    0.000    0.001    0.000 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:51(_wrapfunc)\n",
+      "        2    0.000    0.000    0.001    0.000 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:2250(clip)\n",
+      "        2    0.000    0.000    0.001    0.000 {method 'clip' of 'numpy.ndarray' objects}\n",
+      "        2    0.001    0.000    0.001    0.000 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\numpy\\_core\\_methods.py:100(_clip)\n",
+      "        1    0.000    0.000    0.000    0.000 C:\\Users\\15406\\AppData\\Local\\Temp\\ipykernel_17464\\2105784755.py:34(__filter_by_RANSAC)\n",
+      "      608    0.000    0.000    0.000    0.000 c:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\experiments\\thin_plate_splines\\utils\\annotations.py:79(__init__)\n",
+      "\n",
+      "\n",
+      "peak memory: 204.20 MiB, increment: 45.29 MiB\n"
      ]
     }
    ],
@@ -698,13 +729,29 @@
     "    full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
     "    image = cv2.imread(full_image_path)\n",
     "    resized_img = cv2.resize(image, (DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT))\n",
+    "\n",
+    "    # Turn resized image to an Image and show it\n",
+    "    resized_img_ = Image.fromarray(resized_img)\n",
+    "    resized_img_.show()\n",
+    "\n",
     "    # get the sheet's bounding boxes\n",
     "    sheet_bbs = [\n",
     "        BoundingBox.from_yolo(bb, DESIRED_IMAGE_WIDTH, DESIRED_IMAGE_HEIGHT)\n",
     "        for bb in yolo_bbs\n",
     "    ]\n",
+    "\n",
+    "    # Run the profiler\n",
+    "    profiler = cProfile.Profile()\n",
+    "    profiler.enable()\n",
     "    transformed_img_arr = transform_thin_plate_splines(resized_img, sheet_bbs, landmarks)\n",
+    "    profiler.disable()\n",
+    "\n",
+    "    # Print stats sorted by cumulative time\n",
+    "    stats = pstats.Stats(profiler).sort_stats(SortKey.CUMULATIVE)\n",
+    "    stats.print_stats(20)  # Show top 20 functions by time\n",
+    "    \n",
     "    transformed_img = Image.fromarray(transformed_img_arr)\n",
+    "    transformed_img.show()\n",
     "\n",
     "    #Overlay this image with the original as a sanity check to make sure the transformation is correct\n",
     "    # Should used image from above as well as transformed_img_arr\n",
