--- a/experiments/thin_plate_splines/TPS.ipynb
+++ b/experiments/thin_plate_splines/TPS.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,11 +567,12 @@
     "        np.ndarray: The transformed image at original size\n",
     "    \"\"\"\n",
     "\n",
-    "    # Image dimensions\n",
+    "    # Get image dimensions and downscale to new dimensions\n",
     "    h, w = image.shape[:2]\n",
     "    small_h, small_w = int(h * downscale_factor), int(w * downscale_factor)\n",
     "\n",
-    "    # Scale bounding boxes\n",
+    "    # Helper function to scale bounding boxes down by a factor\n",
+    "    #   Return bounding boxes as a list of BoundingBox objects\n",
     "    def scale_bbs(bbs, factor):\n",
     "        return [\n",
     "            BoundingBox(\n",
@@ -583,28 +584,36 @@
     "            ) for bb in bbs\n",
     "        ]\n",
     "\n",
+    "    # Scale source and destination bounding boxes (destinations are landmarks)\n",
     "    scaled_src_bbs = scale_bbs(src_bbs, downscale_factor)\n",
     "    scaled_dst_bbs = scale_bbs(dst_bbs, downscale_factor)\n",
     "\n",
     "    # Remove duplicates\n",
+    "    # Find duplicate categories\n",
     "    duplicate_cats = {k for k, v in Counter([bb.category for bb in scaled_src_bbs]).items() if v > 1}\n",
     "    duplicate_cats |= {k for k, v in Counter([bb.category for bb in scaled_dst_bbs]).items() if v > 1}\n",
     "\n",
+    "    # Filter out the duplicates\n",
     "    scaled_src_bbs = [bb for bb in scaled_src_bbs if bb.category not in duplicate_cats]\n",
     "    scaled_dst_bbs = [bb for bb in scaled_dst_bbs if bb.category not in duplicate_cats]\n",
     "\n",
+    "    # Sort bounding boxes by category\n",
     "    scaled_src_bbs.sort(key=lambda bb: bb.category)\n",
     "    scaled_dst_bbs.sort(key=lambda bb: bb.category)\n",
     "\n",
     "    # Apply distance filtering\n",
+    "    # Remove points where the distance between source and destination is greater than the threshold\n",
+    "    #   Defaults to 10 pixels\n",
     "    scaled_src_bbs, scaled_dst_bbs = __filter_by_distance(scaled_src_bbs, scaled_dst_bbs, threshold)\n",
     "\n",
     "    # Convert to numpy arrays\n",
+    "    # The points are the centers of the bounding boxes\n",
     "    src_points = np.array([[(bb.left + bb.right) / 2, (bb.top + bb.bottom) / 2] for bb in scaled_src_bbs], dtype=np.float32)\n",
     "    dst_points = np.array([[(bb.left + bb.right) / 2, (bb.top + bb.bottom) / 2] for bb in scaled_dst_bbs], dtype=np.float32)\n",
     "\n",
-    "    # Apply RANSAC filtering\n",
+    "    # Apply RANSAC filtering only if there are at least 4 points to use\n",
     "    if len(src_points) >= 4:\n",
+    "        # Filter using ransac\n",
     "        src_x, src_y, dst_x, dst_y = __filter_by_RANSAC(\n",
     "            scaled_src_bbs, scaled_dst_bbs, \n",
     "            threshold=ransac_threshold, \n",
@@ -623,29 +632,41 @@
     "        return image  # Not enough points for TPS\n",
     "\n",
     "    # Compute displacement field using TPS\n",
+    "    # This uses a radial basis function with thin plate spline kernel to compute the displacement field\n",
+    "    #   rbf_x and rbf_y are the radial basis functions for x and y displacements respectively\n",
+    "    # Interpolation of all the images pixels can be done using these functions to get the final transformed image\n",
+    "\n",
     "    rbf_x = Rbf(dst_points[:, 0], dst_points[:, 1], src_points[:, 0] - dst_points[:, 0], function='thin_plate')\n",
     "    rbf_y = Rbf(dst_points[:, 0], dst_points[:, 1], src_points[:, 1] - dst_points[:, 1], function='thin_plate')\n",
     "\n",
     "    # Generate grid for transformation\n",
+    "    # This has a grid for the location of each pixel in the image\n",
     "    y, x = np.mgrid[0:small_h, 0:small_w].astype(np.float32)\n",
     "\n",
-    "    # Compute displacements\n",
+    "    # Compute displacements for each pixel\n",
+    "    # This has data on the amount of movement of *each pixel* in the x and y directions\n",
     "    dx = rbf_x(x, y).astype(np.float32)\n",
     "    dy = rbf_y(x, y).astype(np.float32)\n",
     "\n",
-    "    # Final coordinates\n",
+    "    # Final coordinate mapping\n",
+    "    # Here we do the actual movement of each pixel\n",
     "    map_x = (x + dx)\n",
     "    map_y = (y + dy)\n",
     "\n",
     "    # Scale back to original resolution\n",
+    "    # Then we scale back to the original resolution\n",
     "    map_x = cv2.resize(map_x, (w, h)) * (1 / downscale_factor)\n",
     "    map_y = cv2.resize(map_y, (w, h)) * (1 / downscale_factor)\n",
     "\n",
-    "    # Clip to image boundaries\n",
+    "    # Clip to image boundaries, don't have any pixels outside the image\n",
+    "    #   It doesn't delete the pixels, it just moves them back inside the image\n",
     "    map_x = np.clip(map_x, 0, w - 1)\n",
     "    map_y = np.clip(map_y, 0, h - 1)\n",
     "\n",
-    "    # Apply warping\n",
+    "    # Apply warping using a bilnear interpolation\n",
+    "    #   This is the final transformed image\n",
+    "    #   Border reflect reflexts the images at the endges so we don't end up with artifacts\n",
+    "    #   Remaps the image and interpolates the pixel values\n",
     "    warped = cv2.remap(image, map_x.astype(np.float32), map_y.astype(np.float32), interpolation=cv2.INTER_LINEAR, borderMode=cv2.BORDER_REFLECT)\n",
     "\n",
     "    return warped\n",
@@ -661,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +730,7 @@
     "\n",
     "    # sort categories alphabetically\n",
     "    src_bbs = sorted(src_bbs, key=lambda bb: bb.category)\n",
-    "    dst_bbs = sorted(dst_bbs, key=lambda bb: bb.category)\n",
+    "    dst_bbs = sorted(dst_bbs, key=lambda bb: bb.category) # These are your landmarks\n",
     "\n",
     "    # remove source points with suspiciously high distances to their destination counterparts\n",
     "    src_bbs, dst_bbs = __filter_by_distance(src_bbs, dst_bbs, max_dist)\n",
