Significant mAP improvement with appropriate ground-truth labels.

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,11 @@
       "Number mAP: 0.9750692520775623\n",
       "Time Challenge mAP: 0.6895061728395062\n",
       "Number Challenge mAP: 0.9745152354570636\n",
-      "Method: agglomerative\n"
+      "Method: agglomerative\n",
+      "Time mAP: 0.6726114649681527\n",
+      "Number mAP: 0.977961432506887\n",
+      "Time Challenge mAP: 0.6719745222929935\n",
+      "Number Challenge mAP: 0.9771349862258955\n"
      ]
     }
    ],
